Fix items' alignments

--- a/css/style.scss
+++ b/css/style.scss
@@ -133,7 +133,7 @@ main {
 	}
 }
 
-#story, .registries {
+#story, .container.registries {
 	margin: auto;
 	max-width: 700px;
 }
@@ -200,9 +200,11 @@ hr {
 }
 
 .item {
-	display: inline-block;
+	display: inline-flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
 	font-size: 35px;
-	align-self: baseline;
 	padding: 30px;
 	width: 390px;
 
@@ -211,7 +213,7 @@ hr {
 	}
 
 	img {
-		margin: auto;
+		margin: 0 auto;
 	}
 }
 
